--- a/history.txt
+++ b/history.txt
@@ -2,4 +2,5 @@ Mi historia
 mi nombre es Herberth fitzroy Garcia Chura
 Naci en Urubamba-Cusco-Peru
 tengo 24 años
-eso es todo.
+eso es todo
+mi vida.
