--- a/history.txt
+++ b/history.txt
@@ -3,4 +3,4 @@ mi nombre es Herberth fitzroy Garcia Chura
 Naci en Urubamba-Cusco-Peru
 tengo 24 años
 eso es todo
-mi vida.
+mi vida y obra maestra.
